Fixed z-index

--- a/src/assets/sass/_components.hero.scss
+++ b/src/assets/sass/_components.hero.scss
@@ -25,4 +25,10 @@
       background-size: auto;
     }
   }
+
+    &__title,
+    &__intro {
+      position: relative;
+      z-index: 1;
+    }
 }
