--- a/src/assets/sass/_objects.text.scss
+++ b/src/assets/sass/_objects.text.scss
@@ -7,4 +7,6 @@
   color: #FFE25E;
   letter-spacing: -1.29px;
   line-height: 56px;
+  position: relative;
+  z-index: 1;
 }
